[package]
name = "scpify"
version = "0.1.0"
edition = "2021"
description = "Rust library for sending and receiving SCPI (Standard Commands for Programmable Instruments) protocol"
license = "MIT"
repository = "https://github.com/Maniir/scpify"
keywords = ["scpi", "instrument", "measurement", "ieee488", "test"]
categories = ["embedded", "hardware-support", "parser-implementations"]
readme = "README.md"

[features]
## Enable the TCP transport server (`scpify::transport::TcpServer`).
tcp = []

[dependencies]

[dev-dependencies]
