[package]
name = "scpify"
version = "0.1.2"
edition = "2021"
description = "Rust library for sending and receiving SCPI (Standard Commands for Programmable Instruments) protocol"
license = "MIT"
repository = "https://github.com/Maniir/scpify"
keywords = ["scpi", "instrument", "measurement", "ieee488", "test"]
categories = ["embedded", "hardware-support", "parser-implementations"]
readme = "README.md"

[features]
## Enable the TCP transport (`scpify::transport::TcpClient`, `scpify::transport::TcpServer`).
tcp = []
## Enable the HiSLIP transport (`scpify::transport::HislipClient`, `scpify::transport::HislipServer`).
hislip = []
default = ["tcp"]

[dependencies]
serde = {version = "1.0.228", features = ["derive"]}

[dev-dependencies]
